<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/CustomTela"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/botaoCardapioSexta"
            style="@style/CustomBotao"
            android:layout_width="363dp"
            android:layout_height="68dp"
            android:layout_marginTop="28dp"
            android:onClick="CardapioSexta"
            android:text="@string/cardapioSexta"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botaoCardapioQuinta" />

        <Button
            android:id="@+id/botaoCardapioSegunda"
            style="@style/CustomBotao"
            android:layout_width="363dp"
            android:layout_height="68dp"
            android:layout_marginTop="36dp"
            android:onClick="CardapioSegunda"
            android:text="@string/cardapioSegunda"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPratosSemana" />

        <Button
            android:id="@+id/botaoCardapioQuarta"
            style="@style/CustomBotao"
            android:layout_width="363dp"
            android:layout_height="68dp"
            android:layout_marginTop="28dp"
            android:onClick="CardapioQuarta"
            android:text="@string/cardapioQuarta"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botaoCardapioTerca" />

        <Button
            android:id="@+id/botaoCardapioQuinta"
            style="@style/CustomBotao"
            android:layout_width="363dp"
            android:layout_height="68dp"
            android:layout_marginTop="28dp"
            android:onClick="CardapioQuinta"
            android:text="@string/cardapioQuinta"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botaoCardapioQuarta" />

        <Button
            android:id="@+id/botaoCardapioSabado"
            style="@style/CustomBotao"
            android:layout_width="363dp"
            android:layout_height="68dp"
            android:layout_marginTop="28dp"
            android:onClick="CardapioSabado"
            android:text="@string/cardapioSabado"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botaoCardapioSexta" />

        <Button
            android:id="@+id/botaoCardapioTerca"
            style="@style/CustomBotao"
            android:layout_width="363dp"
            android:layout_height="68dp"
            android:layout_marginTop="28dp"
            android:onClick="CardapioTerca"
            android:text="@string/cardapioTerca"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botaoCardapioSegunda" />

        <TextView
            android:id="@+id/textViewPratosSemana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="serif"
            android:text="Pratos da Semana"
            android:textColor="@color/Preto"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>