<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/CustomTela"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/botaoPedidos"
            style="@style/CustomBotao"
            android:layout_width="363dp"
            android:layout_height="68dp"
            android:layout_marginTop="16dp"
            android:onClick="CadastrarPratos"
            android:text="@string/pedidos"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <Button
            android:id="@+id/botaoEditarCardapios"
            style="@style/CustomBotao"
            android:layout_width="363dp"
            android:layout_height="68dp"
            android:layout_marginTop="24dp"
            android:onClick="EditarCardapios"
            android:text="@string/editarCardapios"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botaoCadastrarIngredientes" />

        <Button
            android:id="@+id/botaoCadastrarPratos"
            style="@style/CustomBotao"
            android:layout_width="363dp"
            android:layout_height="68dp"
            android:layout_marginTop="24dp"
            android:onClick="CadastrarPratos"
            android:text="@string/cadastrarPratos"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botaoPedidos" />

        <Button
            android:id="@+id/botaoCadastrarIngredientes"
            style="@style/CustomBotao"
            android:layout_width="363dp"
            android:layout_height="68dp"
            android:layout_marginTop="24dp"
            android:onClick="CadastrarIngredientes"
            android:text="@string/cadastrarIngredientes"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botaoCadastrarPratos" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/restauranteaj" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>