<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/CustomTela"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/editTextUsuario"
            style="@style/CustomEdit"
            android:layout_width="210dp"
            android:layout_height="41dp"
            android:layout_marginTop="28dp"
            android:drawableEnd="@drawable/usuario"
            android:drawableRight="@drawable/usuario"
            android:ems="10"
            android:hint="Usuário"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/editTextSenhaLogin"
            style="@style/CustomEdit"
            android:layout_width="210dp"
            android:layout_height="41dp"
            android:layout_marginTop="12dp"
            android:drawableEnd="@drawable/senha"
            android:drawableRight="@drawable/senha"
            android:ems="10"
            android:hint="Senha"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsuario" />

        <TextView
            android:id="@+id/textViewRecuperarSenha"
            style="@style/CustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recuperarsenha"
            app:layout_constraintRight_toRightOf="@+id/editTextSenhaLogin"
            app:layout_constraintTop_toBottomOf="@+id/editTextSenhaLogin" />

        <TextView
            android:id="@+id/textViewLoginInvalido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginInvalido"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginTop="4dp"
            android:visibility="invisible"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRecuperarSenha" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/restauranteaj" />

        <Button
            android:id="@+id/botaoEntrar"
            style="@style/CustomBotao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:layout_marginTop="50dp"
            android:onClick="Login"
            app:layout_constraintLeft_toLeftOf="@+id/editTextSenhaLogin"
            app:layout_constraintTop_toBottomOf="@+id/editTextSenhaLogin" />

        <Button
            android:id="@+id/botaoCadastrar"
            style="@style/CustomBotao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="Cadastrar"
            android:text="@string/cadastrar"
            app:layout_constraintRight_toRightOf="@+id/editTextSenhaLogin"
            app:layout_constraintTop_toBottomOf="@+id/editTextSenhaLogin" />

        <TextView
            android:id="@+id/branco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintRight_toRightOf="@+id/botaoCadastrar"
            app:layout_constraintTop_toBottomOf="@+id/botaoCadastrar" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:visibility="invisible"
            android:indeterminateTint="@color/Laranja"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>